# planning_agent

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.md  tasks.yaml
.github/ISSUE_TEMPLATE/: task.md
agents/: planning_manager.py
benchmarks/evaluation/: README.md  example_commands.sh  run_sudoku.py  sudoku_evaluator.py
benchmarks/reports/: benchmark_results.html
benchmarks/results/: sudoku_4x4_eval_gpt-4.1_planning_disabled_20250416_201635.csv  sudoku_4x4_eval_gpt-4.1_planning_disabled_20250418_111429.csv  sudoku_4x4_eval_gpt-4.1_planning_enabled_20250416_203336.csv  sudoku_4x4_eval_gpt-4.1_planning_enabled_20250417_114908.csv
benchmarks/sudoku_bench/evaluation/: README.md  example_commands.sh  run_sudoku.py
benchmarks/sudoku_bench/results/: sudoku_4x4_eval_gpt-4.1_planning_disabled_20250417_113942.csv  sudoku_4x4_testbatch_20250422_165603.csv
benchmarks/sudoku_bench/sudoku_bench_deps/: __init__.py
benchmarks/travel_planner/: README.md  example_commands.sh  prompts.py  sole_planning.py
benchmarks/travel_planner/final_results/: validation_gpt-4.1_direct_sole-planning_20250421_153309.txt
benchmarks/travel_planner/submission/: test_gpt-4.1_direct_sole-planning_submission.jsonl  validation_gpt-4.1_direct_sole-planning_submission.jsonl
benchmarks/travel_planner/tmp/: test_gpt-4.1_direct_sole-planning.txt  validation_gpt-4.1_direct_sole-planning.txt
data/history/archive_20250410_131653/: hiroshima_trip_plan.yaml  hiroshima_trip_plan_v1.yaml  plan_retirement_email_001.yaml
data/history/archive_20250410_133338/: hiroshima_trip.yaml  hiroshima_trip_0411_0412.yaml  tetris_implementation_plan.yaml  tetris_python_game.yaml
data/history/archive_20250410_140308/: tokyo_trip_001.yaml  tokyo_trip_plan_001.yaml
data/history/archive_20250410_141135/: hiroshima_trip.yaml  hiroshima_trip_plan.yaml
data/history/archive_20250410_174739/: hiroshima_trip_plan.yaml  plan_hiroshima_trip.yaml
data/history/archive_20250410_175219/: hiroshima_trip_2days.yaml  hiroshima_trip_plan.yaml
data/history/archive_20250410_180240/: hiroshima_trip.yaml  hiroshima_trip_plan.yaml
data/history/archive_20250410_181045/: hiroshima_trip_plan.yaml
data/history/archive_20250415_155242/: hiroshima_travel_plan.yaml  hiroshima_trip_plan.yaml
data/history/archive_20250415_165245/: hiroshima_trip_plan_2days.yaml  hiroshima_trip_plan_2days_plan_v1.yaml
data/history/archive_20250415_171754/: hiroshima_trip_plan.yaml  hiroshima_trip_plan_v1.yaml
data/history/archive_20250416_200211/: hiroshima_2024.yaml  hiroshima_trip_2days.yaml  hiroshima_trip_2days_plan.yaml  plan_仮.yaml
data/history/archive_20250416_200638/: killer_little_killer_sudoku_4x4.yaml  main.yaml  plan_killer_little_killer_sudoku_4x4.yaml
data/history/archive_20250416_203345/: main_plan.yaml  plan_sudoku_killer_little_killer_4x4.yaml  sudoku_killer_little_killer_4x4.yaml
data/history/archive_20250416_203518/: 4x4_sudoku_friendly_snake.yaml  active.yaml  plan_4x4_sudoku_friendly_snake.yaml
data/history/archive_20250416_203719/: active.yaml  plan_sudoku_4x4_regionsumlines.yaml  sudoku_4x4_regionsumlines.yaml
data/history/archive_20250416_203945/: plan_sudoku_counting_4x4.yaml  sudoku_counting_circles_4x4.yaml  sudoku_demo.yaml
data/history/archive_20250416_204149/: error_sudoku_4x4_202406.yaml  error_sudoku_4x4_202406_v1.yaml
data/history/archive_20250416_204335/: plan_sudoku_4x4_renban.yaml  sudoku_4x4_renban.yaml
data/history/archive_20250416_204546/: plan_solve_4x4_sudoku_region_sum.yaml  solve_4x4_sudoku_region_sum.yaml
data/history/archive_20250416_204717/: plan_sudoku_4x4_prime_cage_001.yaml  sudoku_4x4_prime_cage_001.yaml
data/history/archive_20250416_204849/: error_sudoku_4x4_sum_palindrome.yaml  plan_error_sudoku_4x4_sum_palindrome.yaml
data/plans/: 1.yaml  4x4_euler_sudoku_plan.yaml  ad_hoc.yaml  ad_hoc_puzzle_plan.yaml  default.yaml  default_plan.yaml  plan1.yaml  plan_sudoku_circles_4x4.yaml  plan_sudoku_knight_thermo_4x4_v1.yaml  sudoku_plan.yaml
data/requirements/: sudoku_circles_4x4.yaml  sudoku_knight_thermo_4x4_v1.yaml
docs/: design_doc.md  development_plan.yaml  mcp_protocol.md  prd.md  rpd.md  smolagents_usage.md  sudoku-bench-implementation.md
front_agents/: generic_task_agent.py
mcp_interface/: server.py
planning_agent/: __init__.py
planning_agent/data/: __init__.py  plan_data.py  requirement_data.py
planning_agents/: planning_manager.py
scripts/: setup.py
tests/: test_cli.py  test_main.py  test_planning_manager.py  test_setup.py
tests/integration/: test_data_integration.py  test_environment.py
tests/mcp_interface/: test_server.py
tests/unit/: test_plan_data.py  test_requirement_data.py  test_setup.py
tests/utils/: __init__.py  test_file_manager.py  test_tools.py
utils/: __init__.py  file_manager.py  normalize_result.py  tools.py
(+1860 files in other folders)
