[project]
name = "planning_agent"
version = "0.1.0"
description = "マルチエージェントシステムにおけるプランニング機能を効率化・最適化するエージェントベースのシステム"
authors = [
    {name = "Hajime Yagihara", email = "eitiwai@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "smolagents>=0.1.0",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["planning_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=planning_agent"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3 
