[project]
name = "planning_agent"
version = "0.1.0"
description = "マルチエージェントシステムにおけるプランニング機能を効率化・最適化するエージェントベースのシステム"
authors = [
    {name = "Hajime Yagihara", email = "eitiwai@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "smolagents>=0.1.0,<0.2.0",
    "pyyaml>=6.0.1,<7.0.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.15.0",
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.7.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.1,<2.0.0",
    "sphinx>=7.2.6,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["planning_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=planning_agent"
markers = [
    "unit: マークユニットテスト",
    "integration: マーク統合テスト",
    "e2e: マークエンドツーエンドテスト",
    "slow: 実行に時間のかかるテスト",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3 

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.sphinx]
project = "Planning Agent"
copyright = "2025, Hajime Yagihara"
author = "Hajime Yagihara"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.viewcode",
    "sphinx.ext.napoleon",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme" 
